--- a/scripts/development/m3_stack/docker-compose.yml
+++ b/scripts/development/m3_stack/docker-compose.yml
@@ -59,9 +59,9 @@ services:
       - M3AGGREGATOR_HOST_ID=m3aggregator01
   m3aggregator02:
     expose:
-      - "6001"
+      - "6002"
     ports:
-      - "0.0.0.0:6001:6001"
+      - "0.0.0.0:6002:6001"
     networks:
       - backend
     build:
@@ -117,7 +117,7 @@ services:
       - backend
     image: prom/prometheus:latest
     volumes:
-      - "./prometheus01.yml:/etc/prometheus/prometheus.yml"
+      - "./prometheus.yml:/etc/prometheus/prometheus.yml"
   prometheus02:
     expose:
       - "9091"
@@ -127,7 +127,7 @@ services:
       - backend
     image: prom/prometheus:latest
     volumes:
-      - "./prometheus02.yml:/etc/prometheus/prometheus.yml"
+      - "./prometheus.yml:/etc/prometheus/prometheus.yml"
   grafana:
     build:
       context: ../../../
