--- a/src/cmd/tools/m3ctl/yaml/examples/replace_node.yaml
+++ b/src/cmd/tools/m3ctl/yaml/examples/replace_node.yaml
@@ -1,13 +1,14 @@
 ---
 operation: replaceNode
-leavingInstanceIDs:
-- oldnodeid1
-candidates:
-- id: newnodeid1
-  isolationGroup: newnodeisogroup1
-  zone: etcdzone1
-  weight: 100
-  endpoint: node11:9000
-  hostname: node11
-  port: 9000
+request:
+  leavingInstanceIDs:
+  - oldnodeid1
+  candidates:
+  - id: newnodeid1
+    isolationGroup: newnodeisogroup1
+    zone: etcdzone1
+    weight: 100
+    endpoint: node11:9000
+    hostname: node11
+    port: 9000
 
